--- a/css/daio.css
+++ b/css/daio.css
@@ -338,11 +338,15 @@ h2 {
 }
 
 .list-box {
-	margin: 40px 0;
+	margin: 20px 0;
 	border-radius: 10px;
 	position: relative;
 	width: auto;
 	padding: 0 6px;
+}
+
+.list-box-no-outline h5 {
+	text-align: center;
 }
 
 .list-box:before,
@@ -353,6 +357,7 @@ h2 {
 	position: absolute;
 	display: inline-block;
 }
+
 .list-box:before {
 	border-right: solid 2px #579435;
 	border-top: solid 2px #579435;
